--- a/style.css
+++ b/style.css
@@ -99,6 +99,7 @@ button:hover {
 .num-btn {
     background-color: #706c68;
     color: white;
+    font-size: 18px;
 } 
 
 .operator {
@@ -107,9 +108,3 @@ button:hover {
     font-size: 25px;
 }
 
-.large-btn {
-    grid-column: 1/3;
-    width: 150px;
-    background-color: #706c68;
-    color: white;
-}
